fixed: layout problem in Chrome 19.0.1068.1

--- a/data/css/style.css
+++ b/data/css/style.css
@@ -529,7 +529,7 @@ pre {
 }
 
 #view_title_bar {
-	height: 21px;
+	height: 22px;
 	width: 100%;
 	overflow: hidden;
 }
